--- a/misc/abstract_de.tex
+++ b/misc/abstract_de.tex
@@ -13,8 +13,8 @@
 
 \noindent
 
-Hybrid Broadcast Broadband TV ist einer der letzten größeren Entwicklungen auf dem Fernsehmarkt. Es ist ein Versuch benutzerfreundliche und erweiternde Sendeangebot an den Zuschauer zu vermitteln über die mit dem Internet verbundene Fernsehgeräte oder Set-Top Boxen. Während sich der Standard weiterentwickelt, wird er bereits in immer mehr Ländern in der Welt bereitgestellt. So erhalten mehr Zuschauer Zugang zu den dargebotenen Services, die für Fernsehsender neue Vertriebsmöglichkeiten, wie Werbung oder Bezahlfernsehen, bieten. Wegen der großen Menge an TV-Herstellern und Modellen ist die Unterstützung der Geräte für HbbTV jedoch sehr unterschiedlich, was die Entwicklung von HbbTV Anwendungen deutlich erschwert. Um sicherzustellen, dass diese dennoch auf den meisten Geräten funktionieren, ist ein mühsehliger und langer manueller Test notwendig. Dies ist mit heutigen Entwicklungsstandards allerdings nicht mehr vereinnehmbar. Die Software Industrie hat sich über die letzten 5 Jahre von einem wasserfall-getriebenen Modell zu einem mehr agilen Anzatz bewegt, bei der kontinuierliche Verbesserungen in kleinen Schritten eines der obersten Prinzipien ist.
+Hybrid Broadcast Broadband TV ist einer der letzten größeren Entwicklungen auf dem Fernsehmarkt. Es ist ein Versuch, über die mit dem Internet verbundenen Fernseh- geräte oder Set-Top Boxen, benutzerfreundliche und erweiternde Sendeangebot an den Zuschauer zu vermitteln. Während sich der Standard weiterentwickelt, wird er bereits in immer mehr Ländern in der Welt bereitgestellt. So erhalten mehr Zuschauer Zugang zu den dargebotenen Services, die für Fernsehsender neue Vertriebsmöglichkeiten, wie Werbung oder Bezahlfernsehen, bieten. Wegen der großen Menge an TV-Herstellern und Modellen ist die Unterstützung der Geräte für HbbTV jedoch sehr unterschiedlich, was die Entwicklung von derartigen Anwendungen deutlich erschwert. Um sicherzustellen, dass diese dennoch auf den meisten Geräten funktionieren, ist häufig ein mühsehliger und manueller Testprozess notwendig. Dies ist mit heutigen Entwicklungsstandards allerdings nicht mehr vereinnehmbar. Die Software Industrie hat sich über die letzten 5 Jahre von einem wasserfall-getriebenen Modell zu einem mehr agilen Anzatz bewegt, bei der kontinuierliche Verbesserungen in kleinen Schritten eines der obersten Prinzipien ist.
 
-Das Hauptziel dieser Master Arbeit ist es, den Entwicklungs- und Testprozess von HbbTV Applikationen zu verbessern, indem eine Entwicklungs- und Testautomatisie-rungsplatform geschaffen wird, die HbbTV Entwicklern hilft, die selben Probleme, die es bereits für Web und Mobile Anwendungen seit Jahren gibt, zu lösen. Sie untersucht die aktuellen Standards in der Entwicklung und Qualitätssicherung von Software und zeigt auf wie diese Methoden ebenfalls im Bereich des Fernsehens angewendet werden können. In dem ein Kommunikationskanal zwischen Applikation und modernen Entwicklungsanwendungen, wie z.B. den Chrome DevTools, geschaffen wird, ermöglicht man Entwicklern zum ersten Mal detailierte Informationen über die Anwendung während der Entwicklung in Erfahrung zu bringen. Zudem zeigt die Arbeit auf, wie durch die Bereitstellung eines Automatisierungsprogammes, welches diesen Kommunikationskanal nutzt, funktionale Tests auf echten Fernsehgeräten in automtisierter Form ausgeführt werden können.
+Das Hauptziel dieser Master Arbeit ist es, den Entwicklungs- und Testprozess von HbbTV Applikationen zu verbessern, indem eine Plattform geschaffen wird, die HbbTV Entwicklern hilft, die selben Probleme, die es bereits für Web- und mobile Anwendungen seit Jahren gibt, zu lösen. Sie untersucht die aktuellen Standards in der Entwicklung und Qualitätssicherung von Software und zeigt auf, wie diese Methoden ebenfalls im Bereich des Fernsehens angewendet werden können. Indem ein Kommunikationskanal zwischen Applikation und modernen Entwicklungsanwendungen, wie z.B. den Chrome DevTools, geschaffen wird, ermöglicht diese Arbeit Entwicklern zum ersten Mal, detailierte Informationen über die Anwendung während der Entwicklung in Erfahrung zu bringen. Zudem zeigt sie auf, wie durch die Bereitstellung eines Automatisierungsprogammes, welches diesen Kommunikationskanal nutzt, funktionale Tests auf echten Fernsehgeräten ausgeführt werden können.
 
 Durch diese Technologien wird demonstriert, wie effizient die Entwicklung von HbbTV Anwendungen sein kann. Der Entwickler erhählt, neben dem Applikationsaufbau, einer JavaScript Konsole und einer detailierten Auflistung aller Netzwerk Pakete, nicht nur umfangreiche Information über die Applikation an sich, sondern auch über ihren Zustand zu jedem beliebigen Zeitpunkt. Zudem beweist das Automatisierungsprogramm wie schnell, zuverlässig und vielseitig funktionale Tests in einem automatisierten Prozess, z.B. durch die Nutzung von Programmen wie Jenkins, ausgeführt werden können. Im Vergleich am Ende wird bewiesen, dass dieser Ansatz für die Entwicklung von HbbTV Anwendungen weitaus besser skalierbar, funktionaler und flexibler ist als jegliche bereits existierende Lösung auf dem Markt.
