--- a/misc/self-assertion.tex
+++ b/misc/self-assertion.tex
@@ -7,7 +7,7 @@
 \vspace*{6cm}
 
 \noindent
-Hereby I declare that I wrote this thesis myself with the help of no more than the mentioned literature and auxiliary means.
+I hereby confirm that the present thesis on ''Design and Implementation of a Development and Test Automation Platform for HbbTV'' is solely my own work and that if any text passages or diagrams from books, papers, the Web or other sources have been copied or in any other way used, all references including those found in electronic media have been acknowledged and fully cited.
 \vspace{2cm}
 
 \noindent
