add copyright page

--- a/index.tex
+++ b/index.tex
@@ -33,6 +33,10 @@
    	\thispagestyle{empty}
     \cleardoublepage
 
+    \include{./misc/copyright}
+    \thispagestyle{empty}
+    \cleardoublepage
+
     \include{./misc/thanx}
     \thispagestyle{empty}
     \cleardoublepage
