better self assertion

--- a/misc/self-assertion.tex
+++ b/misc/self-assertion.tex
@@ -1,23 +1,25 @@
 \newpage
-
 \thispagestyle{empty}
+\selectlanguage{ngerman}
+\newcommand\dotline[2][.5em]{\leavevmode\hbox to #2{\dotfill{}\hfil}}
 
 \begin{large}
-
 \vspace*{6cm}
 
 \noindent
-I hereby confirm that the present thesis on ''Design and Implementation of a Development and Test Automation Platform for HbbTV'' is solely my own work and that if any text passages or diagrams from books, papers, the Web or other sources have been copied or in any other way used, all references including those found in electronic media have been acknowledged and fully cited.
-\vspace{2cm}
-
-\noindent
-Berlin, \today
+Hiermit erkläre ich, dass ich die vorliegende Arbeit selbstständig und eigenhändig sowie ohne unerlaubte fremde Hilfe und ausschließlich unter Verwendung der aufgeführten Quellen und Hilfsmittel angefertigt habe.\\
+\\
+Die selbstständige und eigenständige Anfertigung versichert an Eides statt:
 
 \vspace{3cm}
 
-\hspace*{7cm}%
-\dotfill\\
-\hspace*{8.5cm}%
-\textit{(Signature Christian Bromann)}
+\noindent
+Berlin, den \today
 
+\vspace{2cm}
+\hspace*{-0.6cm}
+\dotline{6.3cm}\\
+\textit{(Unterschrift Christian Bromann)}
+
+\selectlanguage{english}
 \end{large}
