improved bibtex style

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -1,19 +1,24 @@
 % This file was created with JabRef 2.5.
 % Encoding: Cp1252
 
-@MISC{devtools,
+@WEBPAGE{devtools,
   author = {Brenda Barron},
   title = {Why You Should Start Using Chrome Developer Tools Right Now},
+  day = {07},
+  month = {May},
   year = {2015},
   publisher = {elegant themes},
-  url = {\url{https://www.elegantthemes.com/blog/resources/why-you-should-start-using-chrome-developer-tools-right-now}}
+  url = {https://www.elegantthemes.com/blog/resources/why-you-should-start-using-chrome-developer-tools-right-now},
+  note = {last checked on 08/08/2017}
 }
 
-@MANUAL{devtoolsprotocol,
+@WEBPAGE{devtoolsprotocol,
   title = {Chrome DevTools Protocol Viewer - latest (tip-of-tree)},
-  author = {Chrome DevTools team},
+  author = {Google},
+  year = {2017},
   organization = {Google},
-  url = {\url{https://chromedevtools.github.io/devtools-protocol/}}
+  note = {last checked on 08/08/2017},
+  url = {https://chromedevtools.github.io/devtools-protocol/}
 }
 
 @ARTICLE{zte,
@@ -26,91 +31,114 @@
   pages = {39--50}
 }
 
-@ARTICLE{evolution,
+@INPROCEEDINGS{evolution,
+  title = {Evolution trends in hybrid broadcast broadband TV},
   author = {Podhradsky, Pavol},
-  title = {Evolution trends in hybrid broadcast broadband TV.},
+  booktitle = {ELMAR, 2013 55th International Symposium},
+  pages = {7--10},
   year = {2013},
-  journal = {ELMAR, 2013 55th International Symposium}
+  organization = {IEEE}
 }
 
-@MISC{adrTV,
+@WEBPAGE{adrTV,
   author = {Gartnet},
-  title = {Gartner IT Glossary > Addressable TV Advertising},
-  note = {\url{http://www.gartner.com/it-glossary/addressable-tv-advertising}}
+  title = {Gartner IT Glossary - Addressable TV Advertising},
+  note = {last checked on 08/08/2017},
+  year = {2017},
+  url = {http://www.gartner.com/it-glossary/addressable-tv-advertising}
 }
 
-@MANUAL{hbbtv15,
-  title = {ETSI TS 102 796 V1.2.1},
-  author = {HbbTV Association},
+@ARTICLE{hbbtv15,
+  title = {102 796 V1. 2.1 (2012-11)},
+  author = {ETSI, TS},
+  journal = {Hybrid Broadcast Broadband TV},
+  note = {last checked on 08/08/2017},
   month = {11},
   year = {2012}
 }
 
-@MANUAL{biapps,
-  author = {Klaus Merkel},
+@ARTICLE{biapps,
   title = {HbbTV — a hybrid broadcast-broadband system for the living room},
-  organization = {IRT Munich},
+  author = {Merkel, Klaus},
+  journal = {EBU technical review-2010 Q},
+  organization  =  {IRT Munich},
+  volume = {1},
   year = {2010}
 }
 
 @BOOK{testautomation,
   title = {Succeeding with Agile: Software Development Using Scrum},
   publisher = {Addison-Wesley Professional},
+  edition = {1st},
   year = {2009},
   month = {11},
-  author = {Mike Cohn},
-  note = {ISBN: 0321579364}
+  author = {Cohn, Mike},
+  isbn = {0321579364, 9780321579362}
 }
 
-@misc{hbbtvenv,
-  author = "HbbTV Developer",
-  title = "Setting up a development environment --- HbbTV Developer{,} ",
-  year = "2015",
-  month = "10",
-  url = "\url{http://www.hbbtv-developer.com/site/wiki/index.php?title=Setting_up_a_development_environment&oldid=658}",
-  note = "[Online; accessed 6-June-2017]"
+@WEBPAGE{hbbtvenv,
+  author = {HbbTV Developer},
+  title = {Setting up a development environment --- HbbTV Developer{,} },
+  year = {2015},
+  month = {10},
+  note = {last checked on 08/08/2017},
+  url = {http://www.hbbtv-developer.com/site/wiki/index.php?title=Setting_up_a_development_environment&oldid=658}
 }
 
 @MISC{scriptstudio,
-  author = {eurofins - Digital Testing},
+  author = {eurofins, Digital Testing},
   title = {TestWizard Tool Suite},
-  url = "\url{http://www.eurofins-digitaltesting.com/media/28855/testwizard.pdf}"
+  note = {last checked on 08/08/2017},
+  year = "2017",
+  url = {http://www.eurofins-digitaltesting.com/media/28855/testwizard.pdf}
 }
 
-@MISC{unittesting,
+@ARTICLE{unittesting,
   author = {Mike Cohn},
   title = {The Forgotten Layer of the Test Automation Pyramid},
+  journal = {Mike Cohn’s Blog--Succeeding with Agile},
   year = {2009},
-  url = "\url{https://www.mountaingoatsoftware.com/blog/the-forgotten-layer-of-the-test-automation-pyramid}"
+  month = {12},
+  day = {17},
+  note = {last checked on 08/08/2017},
+  url = {https://www.mountaingoatsoftware.com/blog/the-forgotten-layer-of-the-test-automation-pyramid}
 }
 
-@MISC{devops,
+@WEBPAGE{devops,
   author = {BEPEC},
   title = {What exactly is DevOps?},
   year = {2017},
   month = {02},
-  note = "\url{https://www.bepec.in/single-post/2017/02/09/What-exactly-is-DevOps}"
+  day = {09},
+  note = {last checked on 08/08/2017},
+  url = {https://www.bepec.in/single-post/2017/02/09/What-exactly-is-DevOps}
 }
 
-@MISC{w3ctesting,
+@WEBPAGE{w3ctesting,
   author = {Tobie Langel},
   title = {Testing The Open Web Platform},
   year = {2017},
-  url = "\url{https://www.w3.org/blog/2013/02/testing-the-open-web-platform/}"
+  note = {last checked on 08/08/2017},
+  url = {https://www.w3.org/blog/2013/02/testing-the-open-web-platform/}
 }
 
-@MISC{hbbtvtesting,
-  author = {Dr. Bob Campbell},
+@TECHREPORT{hbbtvtesting,
+  author = {Campbell, Dr. Bob},
   title = {Whitepaper on HbbTV Testing for Broadcasters and Operators},
   year = {2015},
-  url = "\url{https://www.hbbtv.org/wp-content/uploads/2015/11/HbbTV-SG-00058-004-HbbTV-Whitepaper-on-HbbTV-Testing-for-Broadcasters-and-Operators-September-2015.pdf}"
+  note = {last checked on 08/08/2017},
+  url = {https://goo.gl/wwtBz6}
 }
 
-@MISC{raspberrypi,
+@ARTICLE{raspberrypi,
   author = {Maksimović, Mirjana and Vujović, Vladimir and Davidović, Nikola and Milošević, Vladimir and Perišić, Branko},
   title = {Raspberry Pi as Internet of Things hardware: Performances and Constraints},
+  journal = {design issues},
+  volume = {3},
+  pages = {8},
   year = {2014},
-  url = "\url{https://www.researchgate.net/publication/272175660_Raspberry_Pi_as_Internet_of_Things_hardware_Performances_and_Constraints}"
+  note = {last checked on 08/08/2017},
+  url = {https://www.researchgate.net/publication/272175660_Raspberry_Pi_as_Internet_of_Things_hardware_Performances_and_Constraints}
 }
 
 @BOOK{jenkins,
@@ -118,8 +146,8 @@
   publisher = {PACKT Publishing},
   year = {2012},
   month = {6},
-  author = {Alan Mark Berg},
-  note = {ISBN: 1849517401}
+  author = {Berg, Alan},
+  isbn = {1849517401, 9781849517409}
 }
 
 @BOOK{socket,
@@ -128,46 +156,58 @@
   year = {2014},
   month = {7},
   author = {Fain, Yakov and Rasputnis, Victor and Tartakovsky, Anatole and Gamov, Viktor},
-  note = {ISBN: 1449356818}
+  isbn = {1449356818, 9781449356811}
 }
 
-@MISC{barrel,
+@BOOK{barrel,
   title = {TypeScript Deep Dive},
-  author = {Basarat Ali Syed},
+  author = {Syed, Basarat Ali},
+  publisher = {Samurai Media Limited},
   year = {2017},
-  note = "\url{https://www.gitbook.com/book/basarat/typescript/details}"
+  note = {last checked on 08/08/2017},
+  url = {https://www.gitbook.com/book/basarat/typescript/details},
+  isbn = {9888407120, 9789888407125}
 }
 
 @MANUAL{devtoolsprotocolDOM,
   title = {Chrome DevTools Protocol Viewer - latest (tip-of-tree) - DOM Domain},
-  author = {Chrome DevTools team},
+  author = {Google},
+  year = {2017},
   organization = {Google},
-  note = {\url{https://chromedevtools.github.io/devtools-protocol/tot/DOM/#event-documentUpdated}}
+  note = {last checked on 08/08/2017},
+  url = {https://chromedevtools.github.io/devtools-protocol/tot/DOM/#event-documentUpdated}
 }
 
 @TECHREPORT{sengo,
   institution = {Eurofins Digital Testing},
-  author = {Bob Campbell},
+  author = {Campbell, Bob},
   title = {HbbTV App Testing - Challenges and Solutions},
   month = {12},
-  year = {2015}
+  year = {2015},
+  note = {last checked on 08/08/2017},
+  url = {http://dtg.org.uk/publications/HbbTV/35_BobCampbell_HbbTV_Presentation.pdf}
 }
 
-@MISC{candybox,
+@WEBPAGE{candybox,
   title = {Candy Box},
   author = {Suitest},
-  note = "\url{https://suite.st/docs/devices/candybox/}"
+  year = {2016},
+  note = {last checked on 08/08/2017},
+  url = {https://suite.st/docs/devices/candybox/}
 }
 
 @INPROCEEDINGS{Lehtonen2015DefiningMF,
   title = {Defining metrics for continuous delivery and deployment pipeline},
-  author = {Timo Lehtonen and Sampo Suonsyrj{\"a} and Terhi Kilamo and Tommi Mikkonen},
+  author = {Lehtonen, Timo and Suonsyrj{\"a}, Sampo and Kilamo, Terhi and Mikkonen, Tommi},
   booktitle = {SPLST},
+  pages={16--30},
   year = {2015}
 }
 
-@MISC{shifttoautomated,
+@WEBPAGE{shifttoautomated,
   title = {Moving From Manual to Automated Testing - A Tester’s Journey},
   author = {CrossBrowserTesting},
-  note = "\url{https://crossbrowsertesting.com/pdfs/moving-from-manual-to-automated-testing.pdf}"
+  year = {2017},
+  note = {last checked on 08/08/2017},
+  url = {https://crossbrowsertesting.com/pdfs/moving-from-manual-to-automated-testing.pdf}
 }
