added missing content

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -211,3 +211,13 @@
   note = {last checked on 08/08/2017},
   url = {https://crossbrowsertesting.com/pdfs/moving-from-manual-to-automated-testing.pdf}
 }
+
+@PATENT{krocek2016method,
+  title = {Method and system for automating the process of testing of software application},
+  author = {KROCEK, L. and PEREVORSKYY, T. and NEDELJKOVIC, M.},
+  url = {http://www.google.it/patents/WO2016180894A1?cl=en},
+  year = {2016},
+  month = nov # "~17",
+  publisher = {Google Patents},
+  note = {WO Patent App. PCT/EP2016/060,586}
+}
