--- a/config/basic.tex
+++ b/config/basic.tex
@@ -28,7 +28,10 @@
   \renewcommand{\figurename}{Fig.}%
   \renewcommand{\contentsname}{Contents}%
   \renewcommand{\listfigurename}{List of Figures}
+  \renewcommand{\listtablename}{List of Tables}
   \renewcommand{\bibname}{Bibliography}
 }
+
+\renewcommand{\arraystretch}{1.5}
 
 \input{./misc/hyphenation}    % use this file to set explicit hyphenations (doesn't seem to work correctly)
