--- a/misc/acronyms.tex
+++ b/misc/acronyms.tex
@@ -38,5 +38,6 @@ UPnP \> Universal Plug and Play\\
 USB \> Universal Serial Bus\\
 uuid \> Universally unique identifier\\
 W3C \> World Wide Web Consortium\\
+WIPO \> World Intellectual Property Organization\\
 \end{tabbing}
 \endinput
