--- a/thesis.tex
+++ b/thesis.tex
@@ -53,6 +53,9 @@
     \listoflistings
     \thispagestyle{empty}
 
+    \listoftables
+    \thispagestyle{empty}
+
     \input{./misc/acronyms}
 
     % if you want to provide a glossary with explanations of important terms put it in here
