last round of fixes

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -221,3 +221,11 @@
   publisher = {Google Patents},
   note = {WO Patent App. PCT/EP2016/060,586}
 }
+
+@WEBPAGE{philogoogle,
+  title = {Ten things we know to be true},
+  author = {Google},
+  year = {2017},
+  url = {https://www.google.com/about/philosophy.html},
+  note = {last checked on 08/12/2017}
+}
